syntax = "proto3";

package com.epam.grpchometask.stubs.ping;

option java_package = "com.epam.grpchometask.stubs.ping";

option java_multiple_files = true;

service PingService{
  rpc getResponse(PingRequest) returns (PingResponse);
}

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
}
